--- a/final-framework-testng/test-output/old/Default suite/classes.html
+++ b/final-framework-testng/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.training.sanity.tests.TeacherReviewStudAassignment_ELTC_035</td>
+<td>com.training.regression.tests.RegStudentDetailToDB_ELTC_063</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>validLoginTest</td>
+<td>loginDBTest10</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
