--- a/final-framework-testng/test-output/old/Default suite/methods.html
+++ b/final-framework-testng/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e6e9c3">  <td>19/06/14 14:51:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TeacherReviewStudAassignment_ELTC_035.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.TeacherReviewStudAassignment_ELTC_035@47c62251]">&gt;&gt;setUpBeforeClass</td> 
+<tr bgcolor="e6e9c3">  <td>19/06/20 12:46:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegStudentDetailToDB_ELTC_063.setUpBeforeClass()[pri:0, instance:com.training.regression.tests.RegStudentDetailToDB_ELTC_063@47c62251]">&gt;&gt;setUpBeforeClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@540159270</td>   <td></td> </tr>
-<tr bgcolor="e6e9c3">  <td>19/06/14 14:51:51</td>   <td>579</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TeacherReviewStudAassignment_ELTC_035.setUp()[pri:0, instance:com.training.sanity.tests.TeacherReviewStudAassignment_ELTC_035@47c62251]">&gt;&gt;setUp</td> 
+<tr bgcolor="e6e9c3">  <td>19/06/20 12:46:22</td>   <td>31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegStudentDetailToDB_ELTC_063.setUp()[pri:0, instance:com.training.regression.tests.RegStudentDetailToDB_ELTC_063@47c62251]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@540159270</td>   <td></td> </tr>
-<tr bgcolor="e6e9c3">  <td>19/06/14 14:52:14</td>   <td>23042</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TeacherReviewStudAassignment_ELTC_035.validLoginTest()[pri:0, instance:com.training.sanity.tests.TeacherReviewStudAassignment_ELTC_035@47c62251]">validLoginTest</td> 
+<tr bgcolor="e6e9c3">  <td>19/06/20 12:46:50</td>   <td>27348</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegStudentDetailToDB_ELTC_063.loginDBTest10()[pri:0, instance:com.training.regression.tests.RegStudentDetailToDB_ELTC_063@47c62251]">loginDBTest10</td> 
   <td>main@540159270</td>   <td></td> </tr>
-<tr bgcolor="e6e9c3">  <td>19/06/14 14:53:01</td>   <td>70201</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TeacherReviewStudAassignment_ELTC_035.tearDown()[pri:0, instance:com.training.sanity.tests.TeacherReviewStudAassignment_ELTC_035@47c62251]">&lt;&lt;tearDown</td> 
+<tr bgcolor="e6e9c3">  <td>19/06/20 12:47:09</td>   <td>46642</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RegStudentDetailToDB_ELTC_063.tearDown()[pri:0, instance:com.training.regression.tests.RegStudentDetailToDB_ELTC_063@47c62251]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@540159270</td>   <td></td> </tr>
 </table>
